# Rust_Shazam_copy

./: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
assets/: tailwind.css
src/: main.rs
src/backend/: Cargo.toml  ODM.db  ODM.db-shm  ODM.db-wal
src/backend/src/: api_docs.rs  error.rs  main.rs  main_route.rs
src/backend/src/routes/songs/: mod.rs  post_songs.rs
src/backend/src/utils/: mod.rs
src/backend/src/utils/audio/: convert_yt_audio_to_wav.rs  create_fingerprints_from_peaks.rs  create_spectrogram_from_samples.rs  extract_peaks_from_spectrogram.rs  fast_fourier_transform.rs  filter_samples.rs  mod.rs  proccess_wav_into_db.rs  reduce_audio_sample_rate.rs  sample_wav_audio.rs
src/backend/src/utils/db/: mod.rs  register_song_to_db.rs  store_fingerprints_to_db.rs
src/backend/src/utils/db/init/: get_pool.rs  init_db.rs  init_pool.rs  init_tables.rs  mod.rs  queries.rs
src/backend/src/utils/youtube/: get_youtube_audio.rs  get_youtube_audio_wav.rs  get_youtube_info.rs  mod.rs
src/components/: echo.rs  main_page.rs  mod.rs
src/frontend/: README.md  index.html  jsconfig.json  package-lock.json  package.json
src/frontend/src/: App.vue
src/frontend/src/assets/: MainIcon.vue
src/frontend/src/components/: MainPage.vue
