[package]
name = "rust-shazam-copy"
version = "0.1.0"
authors = ["simeonnv <simmeon.nv@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
web-sys = { version = "0.3", features = ["MediaDevices", "MediaStream", "MediaStreamConstraints", "Navigator", "Window", "AudioContext", "MediaStreamAudioSourceNode", "AnalyserNode", "MediaStreamTrack"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
tokio = { version = "1.44.1", features = ["rt", "time"] }
wasm-bindgen = "0.2.100"
gloo-timers = { version = "0.3", features = ["futures"] } # Add features = ["futures"]

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
