[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version="1.44.1", features=["full"]}
tokio-utils = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-multipart = "0.7.2"
env_logger = "0.11.7"
actix-cors = "0.7.1"
