[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1.44.1", features = ["full"] }
tokio-utils = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-multipart = "0.7.2"
env_logger = "0.11.7"
actix-cors = "0.7.1"
lazy_static = "1.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "macros",
] }
utoipa = { version = "5.2.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "vendored"] }
infer = "0.19.0"
rusty_ytdl = "0.7.4"
symphonia = "0.5.4"
hound = "3.5.1"
num-complex = "0.4.6"
